feat: project migrated to spring 3