@@ -42,8 +42,7 @@ public class PaymentPendingSaleTransformer
   private String transformInvoiceNumber(ComprobantesDto comprobantesDto) {
     final FiscalLibroIvaVentasDto regFiscal = comprobantesDto.getIdRegistro();
     if (Objects.nonNull(regFiscal)) {
-      return String.format(
-          "%s %s-%s",
+      return "%s %s-%s".formatted(
           comprobantesDto.getLetra(),
           regFiscal.getPuntoVentaFactura(),
           regFiscal.getNumeroFactura());
