@@ -26,8 +26,7 @@ public class SupplierInvoiceSearchResultTransformer
   private String getInvoiceNumber(ProveedoresComprobantesDto from) {
     final FiscalLibroIvaComprasDto idRegistro = from.getIdRegistro();
     if (Objects.nonNull(idRegistro)) {
-      return String.format(
-          "%s %s-%s",
+      return "%s %s-%s".formatted(
           idRegistro.getLetraFactura(),
           idRegistro.getPuntoVentaFactura(),
           idRegistro.getNumeroFactura());
