@@ -18,10 +18,10 @@ package ar.com.gtsoftware.dao;
 import ar.com.gtsoftware.entity.NegocioTiposComprobante;
 import ar.com.gtsoftware.entity.NegocioTiposComprobante_;
 import ar.com.gtsoftware.search.NegocioTiposComprobanteSearchFilter;
-import javax.persistence.EntityManager;
-import javax.persistence.criteria.CriteriaBuilder;
-import javax.persistence.criteria.Predicate;
-import javax.persistence.criteria.Root;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Repository;
 
@@ -55,7 +55,7 @@ public class NegocioTiposComprobanteFacade
     if (StringUtils.isNotEmpty(nsf.getNombre())) {
       String s = nsf.getNombre().toUpperCase();
       Predicate p1 =
-          cb.like(root.get(NegocioTiposComprobante_.nombreComprobante), String.format("%%%s%%", s));
+          cb.like(root.get(NegocioTiposComprobante_.nombreComprobante), "%%%s%%".formatted(s));
       p = appendAndPredicate(cb, p, p1);
     }
     return p;
