@@ -18,10 +18,10 @@ package ar.com.gtsoftware.dao;
 import ar.com.gtsoftware.entity.UbicacionPaises;
 import ar.com.gtsoftware.entity.UbicacionPaises_;
 import ar.com.gtsoftware.search.PaisesSearchFilter;
-import javax.persistence.EntityManager;
-import javax.persistence.criteria.CriteriaBuilder;
-import javax.persistence.criteria.Predicate;
-import javax.persistence.criteria.Root;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
 import org.springframework.stereotype.Repository;
 
 @Repository
@@ -50,7 +50,7 @@ public class UbicacionPaisesFacade extends AbstractFacade<UbicacionPaises, Paise
       Predicate p1 =
           cb.like(
               root.get(UbicacionPaises_.nombrePais),
-              String.format("%%%s%%", psf.getNombrePais().toUpperCase()));
+              "%%%s%%".formatted(psf.getNombrePais().toUpperCase()));
       p = appendOrPredicate(cb, p, p1);
     }
     return p;
