@@ -15,11 +15,12 @@
  */
 package ar.com.gtsoftware.entity;
 
+import java.io.Serial;
 import java.util.Objects;
-import javax.persistence.*;
-import javax.validation.constraints.NotNull;
-import javax.validation.constraints.Size;
-import javax.xml.bind.annotation.XmlRootElement;
+import jakarta.persistence.*;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
+import jakarta.xml.bind.annotation.XmlRootElement;
 
 /**
  * @author rodrigo
@@ -29,6 +30,7 @@ import javax.xml.bind.annotation.XmlRootElement;
 @XmlRootElement
 public class Parametros extends GTEntity<String> {
 
+  @Serial
   private static final long serialVersionUID = 1L;
 
   @Id
@@ -104,7 +106,7 @@ public class Parametros extends GTEntity<String> {
 
   @Override
   public String toString() {
-    return String.format("%s=%s", nombreParametro, valorParametro);
+    return "%s=%s".formatted(nombreParametro, valorParametro);
   }
 
   @Override
