@@ -76,8 +76,7 @@ public class WorkBookFiscalBookService {
     cell.setCellValue("Periodo:");
     cell = row.createCell(6);
     cell.setCellValue(
-        String.format(
-            "%s al %s",
+        "%s al %s".formatted(
             DATE_TIME_FORMATTER.format(libro.getFechaDesde()),
             DATE_TIME_FORMATTER.format(libro.getFechaHasta())));
 
