@@ -76,7 +76,7 @@ public class LibroIVAComprasServiceImpl implements LibroIVAService {
       FiscalPeriodosFiscales periodo = periodosFiscalesFacade.find(filter.getIdPeriodo());
       if (Objects.isNull(periodo)) {
         throw new InvalidInputDataException(
-            String.format("El perído fiscal %d no existe", filter.getIdPeriodo()));
+            "El perído fiscal %d no existe".formatted(filter.getIdPeriodo()));
       }
       libro =
           LibroIVADTO.builder()
@@ -187,8 +187,7 @@ public class LibroIVAComprasServiceImpl implements LibroIVAService {
       facDTO.setRazonSocialCliente("NULA");
     }
     facDTO.setNumeroFactura(
-        String.format(
-            NUMERO_FACTURA_FMT,
+        NUMERO_FACTURA_FMT.formatted(
             factura.getLetraFactura(),
             factura.getPuntoVentaFactura(),
             factura.getNumeroFactura()));
